# bticoin-core-mutuaitons

./: .cirrus.yml  .dockerignore  .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
docker/: Dockerfile.builder  Dockerfile.mutate  Dockerfile.server  Dockerfile.worker
mocks/: mutators.json
mutator/: Cargo.toml
mutator/src/: main.rs  mutator.rs
mutator/src/mutate/: mod.rs
mutator/src/mutators/: execution_flow.rs  mod.rs  number.rs  operator.rs  std_algorithm.rs
server/: Cargo.toml  sqlx-data.json
server/migrations/: 20221209134929_init.sql
server/src/: errors.rs  main.rs  server.rs
src/: errors.rs  main.rs  mutators.rs  run.rs  server.rs
worker/: Cargo.toml
worker/src/: main.rs  run.rs
