[package]
name = "bcm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4"
fancy-regex = "0.10"
rand = "0.8"
diffy = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
md5 = "0.7"
hex = "0.4"
actix = "0.13"
actix-web = "4.2"
reqwest = "0.11"
ctrlc = "3.2"
actix-cors = "0.6"
time = { version = "0.3", features = ["serde"] }
redis = { version = "0.22", features = ["json"] }