[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
actix = "0.13"
actix-web = "4.2"
actix-cors = "0.6"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
redis = { version = "0.22", features = ["json"] }
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
common = { path = "../common" }
