[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = "0.11"
actix-web = "4.2"
ctrlc = "3.2"
wait-timeout = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
common = { path = "../common" }